--- a/index.html
+++ b/index.html
@@ -59,7 +59,18 @@ Advisor or investor for startups: <a href="https://www.intelligems.io/"</a>Intel
 </b> <a href=""</a>"Pricing in the Age of AI,"</a> <b>MIT Press</b>, Forthcoming 2026 (ISBN 978-0262056779) - </b><font color="red">NEW</font></b>
 <br />
 <br />
-</b> <a href="https://link.springer.com/book/9783032070531"</a>"AI in Supply Chains: Perspectives from Global Thought Leaders,"</a> <b>Springer</b> (co-editor) Series in Supply Chain Management 27, 2026 (ISBN 978-3032070531) - </b><font color="red">NEW</font></b>
+</b> <a href="https://link.springer.com/book/9783032070531"</a>"AI in Supply Chains: Perspectives from Global Thought Leaders,"</a> <b>Springer</b> (co-editor) Series in Supply Chain Management 27, 2026 (ISBN 978-3032070531) - </b><font color="red">NEW</font></b> <br />
+Buy the book: 
+<a href="https://www.amazon.com/AI-Supply-Chains-Perspectives-Management/dp/3032070538">
+Amazon.com</a>, 
+<a href="https://a.co/d/gNuOcFg">
+Amazon.ca</a>,
+  <a href="https://link.springer.com/book/9783032070531">
+Springer</a>,
+  <a href="hhttps://www.barnesandnoble.com/w/ai-in-supply-chains-maxime-c-cohen/1148115090">
+Barnes & Noble</a>,
+  <a href="https://www.brownsbfs.co.uk/Product/Cohen-Maxime-C/AI-in-Supply-Chains/9783032070531">
+Browns Books</a>
 <br />
 <br />
 </b> <a href="https://demandprediction.github.io/index.html"</a>"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3030858551)<br />
