--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Amazon.com</a>,
 Amazon.ca</a>,
   <a href="https://link.springer.com/book/9783032070531">
 Springer</a>,
-  <a href="hhttps://www.barnesandnoble.com/w/ai-in-supply-chains-maxime-c-cohen/1148115090">
+  <a href="https://www.barnesandnoble.com/w/ai-in-supply-chains-maxime-c-cohen/1148115090">
 Barnes & Noble</a>,
   <a href="https://www.brownsbfs.co.uk/Product/Cohen-Maxime-C/AI-in-Supply-Chains/9783032070531">
 Browns Books</a>
