--- a/research.html
+++ b/research.html
@@ -558,7 +558,7 @@ Media coverage: <a href="https://www.analysisgroup.com/news-and-events/news/a-pr
 </ol>
 
 <ol start="58">
-<li><p><a href=""> "The State of AI in Canada: Challenges, Opportunities, and Calls to Action,"</a> <b>the State of AI in Canada White Paper</b>, January 2026   <br />
+<li><p><a href="https://maxccohen.github.io/State-of-AI-in-Canada.pdf"> "The State of AI in Canada: Challenges, Opportunities, and Calls to Action,"</a> <b>the State of AI in Canada White Paper</b>, January 2026   <br />
 </div>
 </p>
 </li>
