--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Scientific Director @<a href="https://myopencourt.org/"</a> MyOpenCourt.org</a> 
 Advisor or investor for startups: <a href="https://www.intelligems.io/"</a>Intelligems</a>, <a href="https://crownsync.ai/"</a>CrownSync AI</a>, <a href="https://www.bluequbit.io/"</a>BlueQubit</a>, <a href="https://www.leav.co/"</a>Leav</a>, <a href="https://cherre.com/"</a>Cherre</a>, <a href="https://www.supplyve.com/"</a>Supplyve</a>, <a href="https://www.scribemd.ai/"</a>ScribeMD</a> <br />
 <br />
 <b>Books:<br />
-</b> <a href=""</a>"Pricing in the Age of AI,"</a> <b>MIT Press</b>, Forthcoming 2026 (ISBN 978-0262056779) - </b><font color="red">NEW</font></b>
+</b> <a href="https://mitpress.mit.edu/9780262056779/pricing-in-the-age-of-ai/"</a>"Pricing in the Age of AI,"</a> <b>MIT Press</b>, Forthcoming 2026 (ISBN 978-0262056779) - </b><font color="red">NEW</font></b>
 <br />
 <br />
 </b> <a href="https://link.springer.com/book/9783032070531"</a>"AI in Supply Chains: Perspectives from Global Thought Leaders,"</a> <b>Springer</b> (co-editor) Series in Supply Chain Management 27, 2026 (ISBN 978-3032070531) - </b><font color="red">NEW</font></b> <br />
