--- a/research.html
+++ b/research.html
@@ -567,7 +567,7 @@ Media coverage: <a href="https://www.analysisgroup.com/news-and-events/news/a-pr
 <h3>Books and Book Chapters</h3>
 
 <ol start="59">
-<li><p> M. C. Cohen, <a href="">"Pricing in the Age of AI,"</a> <b>MIT Press</b>, Forthcoming 2026 (ISBN 978-0262056779)
+<li><p> M. C. Cohen, <a href="https://mitpress.mit.edu/9780262056779/pricing-in-the-age-of-ai/">"Pricing in the Age of AI,"</a> <b>MIT Press</b>, Forthcoming 2026 (ISBN 978-0262056779)
 </div>
 </p>
 </li>
