--- a/research.html
+++ b/research.html
@@ -696,7 +696,7 @@ Media coverage: <a href="https://thewebscrapinginsider.beehiiv.com/p/the-web-scr
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5792542">"Supply Chain Management in the AI Era: A Vision Statement from the Operations Management Community,"</a> with T. Dai, G. Perakis, and 39 other co-authors, Submitted <br /> 
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5792542">"Supply Chain Management in the AI Era: A Vision Statement from the Operations Management Community,"</a> with T. Dai, G. Perakis, and 39 other co-authors, Minor Revision in <b>Manufacturing & Service Operations Management</b> <br /> 
 </div>
 </p>
 </li>
