--- a/students.html
+++ b/students.html
@@ -110,9 +110,11 @@
 
 <li><p>Tony Xu - M.S. in Electrical and Computer Engineering at McGill (co-advisor with James Clark)</p>  
 
-<li><p>Eddy Hage-Youssef - McGill UG Student in Computer Science</p>  
+<li><p>Eddy Hage-Youssef - McGill UG Student in Computer Science and Statistics</p>  
 
 <li><p>Chenye Peng - Visiting UG Student, Statistics at Fudan University</p>  
+
+<li><p>Danyl Satanovskyi – McGill UG Student in Mathematics and Computer Science</p>  
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
 </div>
