--- a/research.html
+++ b/research.html
@@ -385,7 +385,7 @@ Accepted to the <b>Fast Track</b> process <br />
 </ol>
 
 <ol start="35">
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4903939">"Strategic Best-Response Fairness Framework for Fair Machine Learning,"</a> with H. Shimao, W. Khern-am-nuai, and K. Kannan, Forthcoming in <b>Information Systems Research</b> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4903939">"Strategic Best-Response Fairness Framework for Fair Machine Learning,"</a> with H. Shimao, W. Khern-am-nuai, and K. Kannan, <b>Information Systems Research</b>, 36(4):1949-2412, 2025 <br />
 Published in the 2022 AAAI/ACM Conference on Artificial Intelligence, Ethics, and Society <br />
 Media coverage: <a href="https://delve.mcgill.ca/read/overcoming-bias-ai-technologies/">Delve</a> <br />
 </div>
