--- a/research.html
+++ b/research.html
@@ -528,7 +528,7 @@ Media coverage: <a href="https://www.analysisgroup.com/news-and-events/news/a-pr
 </ol>
 
 <ol start="54">
-<li><p><a href="">"How to Use Generative AI for Pricing,"</a> <b>MIT Sloan Management Review</b>, Forthcoming <br />
+<li><p><a href="https://sloanreview.mit.edu/article/how-to-use-generative-ai-for-pricing/">"How to Use Generative AI for Pricing,"</a> <b>MIT Sloan Management Review</b>, 2026 <br />
 </div>
 </p>
 </li>
