--- a/research.html
+++ b/research.html
@@ -701,6 +701,13 @@ Media coverage: <a href="https://thewebscrapinginsider.beehiiv.com/p/the-web-scr
 </p>
 </li>
 </ul>
+
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5131606">"Bundling or Discounting? Field Experiments for Healthy and Unhealthy Food,"</a> with N. Bandi and S. Ray, Major Revision in <b>Management Science</b> <br />
+</div>
+</p>
+</li>
+</ul>
   
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5404966">"When AI Sets Wages: Biases and Labor Discrimination in Generative Pricing,"</a> with E. Hage-Youssef and W. Khern-am-nuai, Submitted <br />
@@ -718,13 +725,6 @@ Media coverage: <a href="https://thewebscrapinginsider.beehiiv.com/p/the-web-scr
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5256420">"A/B Testing Under Product Stockouts,"</a> with L. Chen and S. Miao, Submitted <br />
-</div>
-</p>
-</li>
-</ul>
-  
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5131606">"Bundling or Discounting? Field Experiments for Healthy and Unhealthy Food,"</a> with N. Bandi and S. Ray, Submitted <br />
 </div>
 </p>
 </li>
